ids para pagina de login

--- a/sistema-de-controle-academico/src/main/resources/templates/login.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/login.html
@@ -24,11 +24,11 @@
         <form class="ui form">
             <div class="field">
               <label>E-mail</label>
-              <input type="email" name="nome" placeholder="E-mail">
+              <input type="email" name="nome" placeholder="E-mail" id="email">
             </div>
             <div class="field">
               <label>Senha</label>
-              <input type="password" name="senha" placeholder="Senha">
+              <input type="password" name="senha" placeholder="Senha" id="senha">
             </div>
             <button class="ui button primary" type="submit" name="Login">Login</button>
           </form>
