--- a/sistema-de-controle-academico/src/main/resources/static/css/style.css
+++ b/sistema-de-controle-academico/src/main/resources/static/css/style.css
@@ -8,6 +8,12 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.flexvcentered{
+    display: flex;
+    align-items: center;
+}
+
 .flextop{
     display: flex;
     align-items: top;}
@@ -18,9 +24,16 @@ body{
 .fill{
     height: 100%;
 }
+.hfill{
+    width: 100%;
+}
 .flexfill{
     display: flex;
-    height: 100%;
+    flex-grow: 1;
+}
+
+.flexhorizontal{
+    flex-direction: column;
 }
 
 .blockcentered{
@@ -38,6 +51,9 @@ body{
 .separated{
     display: flex;
     margin:10px;
+}
+.padded{
+    padding: 10px;
 }
 .rightAligned{
     align-self: flex-start;
@@ -66,4 +82,12 @@ body{
 }
 .small{
     height: 10px;width:10px
+}
+
+.shadow{
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205);
+}
+
+.rounded{
+    border-radius: 0.28571429rem;
 }
