--- a/sistema-de-controle-academico/src/main/resources/templates/main_menu.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/main_menu.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCOA - Login</title>
+    <title>SCOA - Menu</title>
     <link rel="stylesheet" href="./../static/css/semantic-ui/semantic.css">
     <script src="./../static/css/semantic-ui/semantic.js"></script>
     <link rel="stylesheet" href="./../static/css/style.css">
     <style>
-        body{
-            background-color: #2185d0;
-            color: white;
-        }
+
         #topbar{
- 
-            background-color: white;
+            background-color: var(--scoa-azul);
         }
         #menu{
             background-color: white;
@@ -38,7 +34,7 @@
         </header>
     </div>
     <div class="flex flexfill flexcentered flexhorizontal">
-        <div class="flex flexcentered flexhorizontal shadow rounded padded" id="menu">
+        <div class="flex flexcentered flexhorizontal  rounded padded" id="menu">
             <h1>Selecione um modulo</h1><br>
             <div class=" flex flexcentered padded">
                 <div class="ui basic button">
