tabela de emprestimos (pagina bilbioteca)

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -59,6 +59,7 @@
             <div class="item tab link" data-tab="emprestimos" id="emprestimos_tab">
                 Emprestimos
             </div>
+
             <div class="right menu"><!--menu de pesquisa-->
               <div class="item">
                 <div class="ui transparent icon input">
@@ -83,7 +84,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>James</td>
+                            <td>teste</td>
                             <td>2015</td>
                             <td>Inglês</td>
                             <td>Comédia, Romance</td>
@@ -100,7 +101,33 @@
                 </table>
             </div>
             <div class="ui tab" data-tab="emprestimos">
-                <p>bbb</p>
+                <table class="ui celled table unstackable">
+                    <thead>
+                        <tr>
+                            <th>Usuario</th>
+                            <th>Obras</th>
+                            <th>Prazo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>teste</td>
+                            <td>teste</td>
+                            <td>2015</td>
+                        </tr>
+                        <tr>
+                            <td>teste</td>
+                            <td>teste</td>
+                            <td>2013</td>
+                        </tr>
+                        <tr>
+                            <td>teste</td>
+                            <td>teste</td>
+                            <td>2022</td>
+                        </tr>
+                        
+                    </tbody>
+                </table>
             </div>
         </div>
     
