biblioteca_index.html agora esta sendo servido atravez do thymeleaf

--- a/sistema-de-controle-academico/src/main/resources/static/css/style.css
+++ b/sistema-de-controle-academico/src/main/resources/static/css/style.css
@@ -20,7 +20,8 @@ body{
 
 .flextop{
     display: flex;
-    align-items: top;}
+    align-items: top;
+}
 .flexright{
     display: flex;
     justify-content: right;
