ALELUIA obras_index agr ta gerando a tabela de acordo com oq esta registrado no banco de dados

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -97,6 +97,13 @@
                             <td>Comédia, Romance</td>
                             <td>Filme</td>
                         </tr>
+                        <tr data-th-each="obra : ${obras}">
+                            <td data-th-text = "${obra.titulo}"></td>
+                            <td data-th-text = "${obra.anoPublicacao}"></td>
+                            <td data-th-text = "${obra.idioma}"></td>
+                            <td data-th-text = "${obra.palavrasChave}"></td>
+                            <td data-th-text = "${obra.TIPO}"></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
