--- a/sistema-de-controle-academico/src/main/resources/templates/login.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
     </div>
     
     <div class="ui container">
-        <form class="ui form">
+        <form class="ui form" method="post" action="/login"><!--Como ainda n existe sistema de login, /login aqui é temporario e não faz nada, substituir no futuro pela uri de login da api -->
             <div class="field">
               <label>E-mail</label>
               <input type="email" name="nome" placeholder="E-mail" id="email">
