menu dropdown para cadastro (biblioteca)

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -28,7 +28,29 @@
                     <div href="" class="ui simple dropdown item" id="">
                         <i class="file icon" style="padding-right: 10px;"></i>
                         <div class="menu">
-                            <div href="" class="item">Cadastrar</div>
+                            <div href="" class="ui simple dropdown item">
+                                <i class="dropdown icon"></i>
+                                
+                                <div class="menu">
+                                    <div class="ui simple dropdown item">
+                                        <i class="dropdown icon"></i>
+                                        <div class="menu">
+                                            <a href="" class="item">Artigo</a>
+                                            <a href="" class="item">Filme</a>
+                                            <a href="" class="item">Jornal</a>
+                                            <a href="" class="item">Livro</a>
+                                            <a href="" class="item">Manual</a>
+                                            <a href="" class="item">Revista</a>
+                                        </div>    
+                                        Obra
+                                    </div>
+                                    <div class="item">Aluno</div>
+                                    <div class="item">Professor</div>
+                                    <div class="item">Funcionario</div>
+                                </div>
+                                
+                                Cadastrar
+                            </div>
                             <a href="" class="item">Emitir relatorios</a>
                         </div>
                         Arquivo
