Pagina de registro de artigo

--- a/sistema-de-controle-academico/src/main/resources/static/css/style.css
+++ b/sistema-de-controle-academico/src/main/resources/static/css/style.css
@@ -22,6 +22,10 @@ body{
     display: flex;
     align-items: top;
 }
+.flexbottom{
+    display: flex;
+    align-items: flex-end;
+}
 .flexright{
     display: flex;
     justify-content: right;
