--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -35,7 +35,7 @@
                                     <div class="ui simple dropdown item">
                                         <i class="dropdown icon"></i>
                                         <div class="menu">
-                                            <a href="" class="item">Artigo</a>
+                                            <a href="/biblioteca/cadastro/obra/artigo" class="item">Artigo</a>
                                             <a href="" class="item">Filme</a>
                                             <a href="" class="item">Jornal</a>
                                             <a href="" class="item">Livro</a>
