Tela de cadastro de filme funcionando
Tive que implementar um conversor de String para Duration pq o spring n consegue sozinho :/

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -36,10 +36,15 @@
                                         <i class="dropdown icon"></i>
                                         <div class="menu">
                                             <a href="/biblioteca/obra/artigo" class="item">Artigo</a>
-                                            <a href="" class="item">Filme</a>
+
+                                            <a href="/biblioteca/obra/filme" class="item">Filme</a>
+
                                             <a href="" class="item">Jornal</a>
+
                                             <a href="" class="item">Livro</a>
+
                                             <a href="" class="item">Manual</a>
+
                                             <a href="" class="item">Revista</a>
                                         </div>    
                                         Obra
