pagina de registro de jornal funcionando

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -39,7 +39,7 @@
 
                                             <a href="/biblioteca/obra/filme" class="item">Filme</a>
 
-                                            <a href="" class="item">Jornal</a>
+                                            <a href="/biblioteca/obra/jornal" class="item">Jornal</a>
 
                                             <a href="" class="item">Livro</a>
 
