pagina de registro de livro

--- a/sistema-de-controle-academico/src/main/resources/templates/registrar_filme.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/registrar_filme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCOA - Cadastro Artigo</title>
+    <title>SCOA - Cadastro Filme</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
     <link rel="stylesheet" href="./../static/css/semantic-ui/semantic.css" th:href="@{/css/semantic-ui/semantic.css}">
     <script src="./../static/css/semantic-ui/semantic.js" th:src="@{/css/semantic-ui/semantic.js}"></script>
