--- a/sistema-de-controle-academico/src/main/resources/templates/registrar_livro.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/registrar_livro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCOA - Cadastro Jornal</title>
+    <title>SCOA - Cadastro Livro</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
     <link rel="stylesheet" href="./../static/css/semantic-ui/semantic.css" th:href="@{/css/semantic-ui/semantic.css}">
     <script src="./../static/css/semantic-ui/semantic.js" th:src="@{/css/semantic-ui/semantic.js}"></script>
@@ -15,7 +15,7 @@
 <body class="flex flexhorizontal"> 
     
     <div class="flexcentered">
-        <h1>Cadastro Jornal</h1>
+        <h1>Cadastro Livro</h1>
     </div>
     <div class="flexcentered">
       <img src="./../static/images/SCOA.png" alt="SCOA logo" id="scoalogo" class="invisible">
@@ -23,7 +23,7 @@
     
     <div class="flex flexfill flexbottom padded">
       <div class="ui container padded">
-          <form class="ui form" method="post" th:action="@{/biblioteca/obra/jornal}" th:object="${jornaldto}" id="cadastro_jornal">
+          <form class="ui form" method="post" th:action="@{/biblioteca/obra/livro}" th:object="${livrodto}" id="cadastro_livro">
 
               <div class="field">
                 <label>Titulo</label> 
@@ -119,13 +119,28 @@
               </div>
 
               <div class="field">
-                <label>Manchete</label> 
-                <input type="text" name="manchete" th:field="*{manchete}" placeholder="Manchete" id="manchete">
+                <label>Autor</label> 
+                <input type="text" name="autor" th:field="*{autor}" placeholder="Autor" id="autor">
               </div>
               
               <div class="field">
                 <label>Quantidade de paginas</label> 
                 <input type="number" name="quantidadePaginas" th:field="*{quantidadePaginas}" placeholder="Quantidade de paginas" id="quantidadePaginas">
+              </div>
+
+              <div class="field">
+                <label>Sinopse</label> 
+                <textarea id="sinopse" name="sinopse" rows="5" cols="10" th:field="*{sinopse}" ></textarea>
+              </div>
+
+              <div class="field">
+                <label>ISBN</label> 
+                <input type="text" name="ISBN" th:field="*{ISBN}" placeholder="ISBN" id="ISBN">
+              </div>
+
+              <div class="field">
+                <label>Editora</label> 
+                <input type="text" name="editora" th:field="*{editora}" placeholder="Editora" id="editora">
               </div>
   
               <div class="ui error message">
