Pagina de registro de livro funcionando

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -41,7 +41,7 @@
 
                                             <a href="/biblioteca/obra/jornal" class="item">Jornal</a>
 
-                                            <a href="" class="item">Livro</a>
+                                            <a href="/biblioteca/obra/livro" class="item">Livro</a>
 
                                             <a href="" class="item">Manual</a>
 
