tela de cadastro de manual funcionando

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -43,7 +43,7 @@
 
                                             <a href="/biblioteca/obra/livro" class="item">Livro</a>
 
-                                            <a href="" class="item">Manual</a>
+                                            <a href="/biblioteca/obra/manual" class="item">Manual</a>
 
                                             <a href="" class="item">Revista</a>
                                         </div>    
