pagina de registrar revista funcionando

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -45,7 +45,7 @@
 
                                             <a href="/biblioteca/obra/manual" class="item">Manual</a>
 
-                                            <a href="" class="item">Revista</a>
+                                            <a href="/biblioteca/obra/revista" class="item">Revista</a>
                                         </div>    
                                         Obra
                                     </div>
