Sistema de pesquisa de obras

--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -90,8 +90,8 @@
             <div class="right menu"><!--menu de pesquisa-->
               <div class="item">
                 <div class="ui transparent icon input">
-                  <input type="text" placeholder="Pesquisar...">
-                  <i class="search link icon"></i>
+                  <input type="text" placeholder="Pesquisar..." id="input_pesquisa">
+                  <i class="search link icon" th:onclick="|biblioteca_get_by_name()|" onclick=""></i>
                 </div>
               </div>
             </div>
