Alterando a logo das páginas de login e registro

--- a/sistema-de-controle-academico/src/main/resources/templates/registro.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/registro.html
@@ -16,7 +16,7 @@
         <h1>Registro</h1>
     </div>
     <div class="flexcentered">
-      <img src="./../static/images/SCOA.png" alt="SCOA logo" id="scoalogo">
+      <img src="./../static/images/SCOA ANIM.gif" alt="SCOA logo" id="scoalogo">
     </div>
     
     <div class="ui container">
