--- a/sistema-de-controle-academico/src/main/resources/static/css/style.css
+++ b/sistema-de-controle-academico/src/main/resources/static/css/style.css
@@ -1,3 +1,4 @@
+
 :root {
     --scoa-azul: #2185d0;
 }
@@ -108,5 +109,15 @@ body{
 .invisible{
     display: none;
 }
+
+.text_pad_login{
+    font-family: 'League Spartan', sans-serif; 
+    font-size: 38.5px;
+    margin-top: 100px;
+    font-weight: bold;  
+    color: #545454;
+
+}
+
 
 
