scoa_form centralizar (css)

--- a/sistema-de-controle-academico/src/main/resources/templates/login.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
     
 </head>
 
-<body style="margin-left: 31%; margin-right: 31%;">
+<body style="margin-left: 31%; margin-right: 31%;" class="scoa_form">
     
     
     <div class="flexcentered">
