--- a/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/biblioteca_index.html
@@ -154,6 +154,7 @@
                 <table class="ui celled table unstackable">
                     <thead>
                         <tr>
+                            <th>ID</th>
                             <th>Usuario</th>
                             <th>Obras</th>
                             <th>Prazo</th>
@@ -173,6 +174,7 @@
                         
                         <tr data-th-each="emprestimo : ${emprestimos}">
                         <!-- comment    <td data-th-text = "${emprestimo.cliente}"></td>  -->
+                            <td data-th-text="${emprestimo.id}"> emprestimo.id</td>
                             <td> emprestimo.cliente </td>
                             <td>
                                 <span  data-th-each="obra : ${emprestimo.obras}">
@@ -180,6 +182,7 @@
                                 </span>
                             </td>
                             <td data-th-text = "${emprestimo.prazo}"></td>
+                            
                         </tr>
                     </tbody>
                 </table>
