--- a/sistema-de-controle-academico/src/main/resources/templates/registrar_filme.html
+++ b/sistema-de-controle-academico/src/main/resources/templates/registrar_filme.html
@@ -12,7 +12,7 @@
     <script src="./../static/javascript/app.js" th:src="@{/javascript/app.js}"></script>
 </head>
 
-<body class="flex flexhorizontal"> 
+<body class="flex flexhorizontal scoa_form"> 
     
     <div class="flexcentered">
         <h1>Cadastro Filme</h1>
